universe-apps/environments/prod/api/patch-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api
  annotations:
    acme.cert-manager.io/http01-ingress-class: nginx
    external-dns.alpha.kubernetes.io/hostname: api.dao.universe.xyz
